syntax="proto3";

package yandexcloud.datatransfer.dtextension.source.v1;

message ErrorResponse {
    string error = 1;
    string verbose = 2;
}

message Table {
    string database = 1;
    string name = 2;
}

enum TransferType {
    TRANSFER_TYPE_UNSPECIFIED = 0;
    TRANSFER_TYPE_SNAPSHOT_ONLY = 1;
    TRANSFER_TYPE_INCREMENT_ONLY = 2;
    TRANSFER_TYPE_SNAPSHOT_AND_INCREMENT = 3;
}

message ChangeItem {
    bytes change_item_serialized = 1;
}